2002-07-04   Gisle Aas <gisle@ActiveState.com>

    Release 1.11

    More robust TIFF parser that keeps on going if some of the
    fields appears to be garbage.

    Workaround for "Samsung Digimax 200"'s brain-dead resolution
    values.

    Updated some tags based on the Exif 1.2 spec.

    Minor fix to exifdump example program so that it can actually
    dump the test.jpg



2002-05-28   Gisle Aas <gisle@ActiveState.com>

    Release 1.10

    Support for "FUJIFILM FinePix6900ZOOM" and "Canon Canon EOS D60".
    The Fuji support was contributed by Cyril L. Pertsev <kika@kika.ru>
    and also included infrastructure for decoding of EXIF tags with
    UNKNOWN value types.

    Deal with signed TIFF values.



2001-12-14   Gisle Aas <gisle@ActiveState.com>

    Release 1.09

    Use File::Spec in Makefile.PL to improve portability.
    Patch by Chris Nandor <pudge@pobox.com>.

    Extended support for decoding of maker specific tags
    for Nikon E995 and Olympus 3040Z.

    TIFF support contributed by <clarsen@emf.net>.

    Decoding of JPEG color components by <tkil@scrye.com>.



2001-08-24   Gisle Aas <gisle@ActiveState.com>

    Release 1.08

    The html_dim() function did not work at all.
    Patch by Hans-Georg <hgf@berlin.snafu.de>.

    Removed ASCII image support.

    TIFF rational numbers are now blessed and use overloading to
    convert themselves to strings and numbers in a more sensible way.
    They are still references to arrays containing 2 numbers.

    GIF global color table reading fix.
    Patch by Tom Hargreaves <admin@traderwebs.co.uk>.

    Support for zTXt chunks in PNG.  This only works when the Compress::Zlib
    module is available.  Contributed by Chip Marshall <chip@setzer.chocobo.cx>

    Updated Exif URIs in documentation



2001-04-10   Gisle Aas <gisle@ActiveState.com>

    Release 1.07

    Image::Info::BMP should not use architecture-dependent
    unpack descriptors.  Fix by <Jost.Krieger@ruhr-uni-bochum.de>.


